force-app/main/default/objects/SOLXYZCSO001__FleekformSetting__c/SOLXYZCSO001__FleekformSetting__c.object-meta.xml
<CustomObject>
    <label>FleekformSetting</label>
    <nameField>
        <label>FleekformSettingName</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>