force-app/main/default/objects/SOLXYZCSO001__FleekformSetting__c/fields/SOLXYZCSO001__FleekformUserId__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__FleekformUserId__c</fullName>
    <label>FleekformUserId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>