force-app/main/default/objects/SOLXYZCSO001__FleekformSetting__c/fields/SOLXYZCSO001__Unique__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>